package io.hamo.qdio.playback;

public enum PlayerState {
    PLAYING,
    PAUSED,
    STOPPED

}
